Invalidate LayoutSVGText if descendant LayoutObject is invalidated.

We used to invalidate only parent LayoutSVGText but
need invalidate ancestor LayoutSVGText because LayoutSVGText
consists of a tree like "<svg><text><tspan>foo</tspan></text></svg>".

Bug: 781705
Change-Id: I12b38a7a4a78c7bff3e90698e3f64e62fac6101a
Reviewed-on: https://chromium-review.googlesource.com/771061
Reviewed-by: Xiaocheng Hu <xiaochengh@chromium.org>
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Commit-Queue: Yoichi Osato <yoichio@chromium.org>
Cr-Commit-Position: refs/heads/master@{#516985}
Former-commit-id: 6a0aeb16c2083c9bd56aed8d410fca532f338846